updated lots of workshops

--- a/workshops/week-03-2023.md
+++ b/workshops/week-03-2023.md
@@ -1,27 +1,22 @@
-**Tutorial Week 3, Semester 2 2022: Cultural Probes**
+---
+title: Cultural Probes
+author: Dr Jennyfer Lawrence Taylor
+---
 
-Prepared by Jennyfer Lawrence Taylor (with contributions from Penny
-Kyburz)
+## Aims and Purpose
 
-**Aims and Purpose**
-
-The purpose of this tutorial is to give you hands-on experience in
-designing and working with cultural probes, which is the design research
-method that you will be engaging with for Project 1.
+The purpose of this tutorial is to give you hands-on experience in designing and working with cultural probes, which is the design research method that you will be engaging with for Project 1.
 
 The intended learning outcomes of this workshop are to:
 
 - Define and identify the features of cultural probes, and their role in
   HCI research
-
 - Design a cultural probe activity as part of a cultural probe kit
-
 - Evaluate the cultural probe activity designed by other tutorial
   members
-
 - Reflect on designing a meaningful set of cultural probe activities.
 
-**Preparation**
+## Preparation
 
 You should complete the following activities prior to attending your
 tutorial:
@@ -38,9 +33,9 @@ tutorial:
 
     b.  Gaver, B, Dunne, T & Pacenti, E 1999, 'Design: Cultural Probes',
         *Interactions*, vol. 6, no. 1, pp. 21--29, accessed from
-        \<https://doi-org.virtual.anu.edu.au/10.1145/291224.291235\>
+        <https://doi-org.virtual.anu.edu.au/10.1145/291224.291235>
 
-**Structure**
+## Structure
 
 The tutorial will follow this structure:
 
@@ -51,9 +46,9 @@ The tutorial will follow this structure:
 3.  Presentation and discussion of the cultural probe activities, and
     close (20 mins)
 
-**Activities**
+## Activities
 
-Review of cultural probe examples in ACM Digital Library (15 mins)
+### Reviewing Cultural Probe Examples in ACM Digital Library (15 mins)
 
 1.  Search for a HCI paper that use cultural probes in the ACM Digital
     Library. Summarise the cultural probe activities that the paper
@@ -82,7 +77,7 @@ Review of cultural probe examples in ACM Digital Library (15 mins)
         cultural probe method (as discussed in the lecture and
         readings)?
 
-Design of a cultural probe activity (15 mins)
+### Design of a cultural probe activity (15 mins)
 
 1.  Your Tutor will divide the class into groups of 4
 
@@ -102,8 +97,7 @@ Design of a cultural probe activity (15 mins)
     d.  A list of follow-up interview questions that you could ask the
         participants to find out more about their completed activities
 
-Presentation and discussion of the cultural probe activities, and close
-(20 mins)
+### Presentation and discussion of the cultural probe activities, and close (20 mins)
 
 1.  Your Tutor will bring everyone back together for a whole group
     discussion
@@ -129,6 +123,3 @@ Presentation and discussion of the cultural probe activities, and close
 
     d.  Whether there are ethical issues or considerations relating to
         the cultural probe activities that you have designed.
-
-The Tutor will bring the workshop to a close and answer any questions if
-time.
