--- a/workshops/week-04-2023.md
+++ b/workshops/week-04-2023.md
@@ -1,9 +1,9 @@
-**Tutorial Week 4, Semester 2 2022: Human Ethics in HCI Research**
+---
+title: Human Ethics in HCI Research
+author: Dr Jennyfer Lawrence Taylor
+---
 
-Prepared by Jennyfer Lawrence Taylor (with contributions from Penny
-Kyburz)
-
-**Aims and Purpose**
+## Aims and Purpose
 
 The purpose of this tutorial is to introduce you to the *ANU Responsible
 Conduct of Research Policy* and NHMRC *National Statement on Ethical
@@ -13,13 +13,11 @@ and concepts to qualitative HCI research.
 The intended learning outcomes for this tutorial are:
 
 - Define the *NHMRC National Statement* values and principles
-
 - Apply the *NHMRC National Statement* values and principles in the
   conduct of qualitative HCI projects
-
 - Identify ethical issues in HCI research involving people
 
-**Preparation**
+## Preparation
 
 You should complete the following activities prior to attending your
 tutorial:
@@ -33,7 +31,7 @@ tutorial:
       (**<https://www.nhmrc.gov.au/about-us/publications/national-statement-ethical-conduct-human-research-2007-updated-2018>
       (NHRMC 2018)
 
-**Structure**
+## Structure
 
 The tutorial will follow this structure:
 
@@ -45,52 +43,53 @@ The tutorial will follow this structure:
 
 3.  Report back to the tutorial group and close (10 mins)
 
-**Activities**
+## Activities
 
-1.  Your Tutor will divide the class into 4 groups
+### Group assignments
 
-2.  Each group will be allocated one of the following papers:
+Your Tutor will divide the class into 4 groups
 
-    - **Project 1 -- Co-Design of a social media platform for Aboriginal
-      Australians** (Leong, Lawrence & Wadley 2019)
+Each group will be allocated one of the following papers:
 
-    - **Project 2 -- Designing a smart clothing telehealth system for
-      physical rehabilitation of lower limb pain** (Aggarwal et al.
-      2020)
+- **Project 1 -- Co-Design of a social media platform for Aboriginal
+  Australians** (Leong, Lawrence & Wadley 2019)
 
-    - **Project 3 -- Participatory research with children about their
-      play activities** (Cumbo, Eriksson & Iversen 2019)
+- **Project 2 -- Designing a smart clothing telehealth system for
+  physical rehabilitation of lower limb pain** (Aggarwal et al.
+  2020)
 
-    - **Project 4 -- Social uses of social robots among people with
-      intellectual disability** (Balasuriya et al. 2019)**\**
+- **Project 3 -- Participatory research with children about their
+  play activities** (Cumbo, Eriksson & Iversen 2019)
 
-3.  Small group discussion of the **NHMRC National Statement values and
-    principles** with respect to the HCI projects (15 mins)\
-    \
-    For each of the NHMRC values and principles (research merit and
-    integrity, justice, beneficence, or respect):
+- **Project 4 -- Social uses of social robots among people with
+  intellectual disability** (Balasuriya et al. 2019)**\**
 
-    a.  Summarise the value or principle in your own words in 1-2
-        sentences
+### Values and Principles
 
-    b.  Brainstorm how the principle applies to your allocated paper and
-        to the HCI research methods discussed in the course more broadly
+Small group discussion of the **NHMRC National Statement values and     principles** with respect to the HCI projects (15 mins)
 
-4.  Small group discussion of benefit, risk, consent, confidentiality
-    with respect to HCI projects (20 mins)
+For each of the NHMRC values and principles (research merit and integrity, justice, beneficence, or respect):
 
-    a.  Review the paper (in particular the title, abstract, and methods
-        sections) and discuss the benefits, risks, consent, and
-        confidentiality mechanisms and issues that would apply in the
-        conduct of this research
+a.  Summarise the value or principle in your own words in 1-2
+    sentences
 
-    b.  Refer to the *National Statement* to check whether there are any
-        particular considerations that would apply to working with the
-        participant groups addressed in these projects
+b.  Brainstorm how the principle applies to your allocated paper and
+    to the HCI research methods discussed in the course more broadly
 
-5.  Report back to and close (10 mins)
+###  Benefits, risks, consent, and confidentiality
 
-<!-- -->
+Small group discussion of benefit, risk, consent, confidentiality    with respect to HCI projects (20 mins)
+
+a.  Review the paper (in particular the title, abstract, and methods
+    sections) and discuss the benefits, risks, consent, and
+    confidentiality mechanisms and issues that would apply in the
+    conduct of this research
+
+b.  Refer to the *National Statement* to check whether there are any
+    particular considerations that would apply to working with the
+    participant groups addressed in these projects
+
+### Report back to and close (10 mins)
 
 a.  Your Tutor will bring you back together for a whole group discussion
 
@@ -101,42 +100,42 @@ b.  Share your thoughts on how these values, principles, and concepts
 c.  Your Tutor will bring the tutorial to a close and answer any
     questions if time.
 
-**Readings and References**
+## Readings and References
 
-Aggarwal, D, Hoang, T, Ploderer, B, Vetere, F, Khot, RA & Bradford, M
-2020, 'Lessons Learnt from Designing a Smart Clothing Telehealth System
-for Hospital Use', in *32nd Australian Conference on Human-Computer
-Interaction*, OzCHI '20, Association for Computing Machinery, New York,
-NY, USA, pp. 355--367, accessed from
-\<https://doi-org.virtual.anu.edu.au/10.1145/3441000.3441033\>.
+- Aggarwal, D, Hoang, T, Ploderer, B, Vetere, F, Khot, RA & Bradford, M
+  2020, 'Lessons Learnt from Designing a Smart Clothing Telehealth System
+  for Hospital Use', in *32nd Australian Conference on Human-Computer
+  Interaction*, OzCHI '20, Association for Computing Machinery, New York,
+  NY, USA, pp. 355--367, accessed from
+  \<https://doi-org.virtual.anu.edu.au/10.1145/3441000.3441033\>.
 
-Australian National University 2019, 'Policy: Responsible Conduct of
-Research', *ANU Website*, accessed July 14, 2021, from
-\<https://policies.anu.edu.au/ppl/document/ANUP_007402\>.
+- Australian National University 2019, 'Policy: Responsible Conduct of
+  Research', *ANU Website*, accessed July 14, 2021, from
+  \<https://policies.anu.edu.au/ppl/document/ANUP_007402\>.
 
-Balasuriya, SS, Sitbon, L, Brereton, M & Koplick, S 2019, 'How Can
-Social Robots Spark Collaboration and Engagement among People with
-Intellectual Disability?', in *Proceedings of the 31st Australian
-Conference on Human-Computer-Interaction*, OZCHI'19, Association for
-Computing Machinery, New York, NY, USA, pp. 209--220, accessed from
-\<https://doi-org.virtual.anu.edu.au/10.1145/3369457.3370915\>.
+- Balasuriya, SS, Sitbon, L, Brereton, M & Koplick, S 2019, 'How Can
+  Social Robots Spark Collaboration and Engagement among People with
+  Intellectual Disability?', in *Proceedings of the 31st Australian
+  Conference on Human-Computer-Interaction*, OZCHI'19, Association for
+  Computing Machinery, New York, NY, USA, pp. 209--220, accessed from
+  \<https://doi-org.virtual.anu.edu.au/10.1145/3369457.3370915\>.
 
-Cumbo, BJ, Eriksson, E & Iversen, OS 2019, 'The "Least-Adult" Role in
-Participatory Design with Children', in *Proceedings of the 31st
-Australian Conference on Human-Computer-Interaction*, OZCHI'19,
-Association for Computing Machinery, New York, NY, USA, pp. 73--84,
-accessed from \<https://doi.org/10.1145/3369457.3369464\>.
+- Cumbo, BJ, Eriksson, E & Iversen, OS 2019, 'The "Least-Adult" Role in
+  Participatory Design with Children', in *Proceedings of the 31st
+  Australian Conference on Human-Computer-Interaction*, OZCHI'19,
+  Association for Computing Machinery, New York, NY, USA, pp. 73--84,
+  accessed from \<https://doi.org/10.1145/3369457.3369464\>.
 
-Frauenberger, C, Rauhala, M & Fitzpatrick, G 2017, 'In-Action Ethics',
-*Interacting with Computers*, vol. 29, no. 2, pp. 220--236, accessed
-from \<https://doi.org/10.1093/iwc/iww024\>.
+- Frauenberger, C, Rauhala, M & Fitzpatrick, G 2017, 'In-Action Ethics',
+  *Interacting with Computers*, vol. 29, no. 2, pp. 220--236, accessed
+  from \<https://doi.org/10.1093/iwc/iww024\>.
 
-Leong, TW, Lawrence, C & Wadley, G 2019, 'Designing for diversity in
-Aboriginal Australia : Insights from a national technology project', in
-*Proceedings of the 31st Australian Conference on
-Human-Computer-Interaction (OZCHI'19)*, Association for Computing
-Machinery, New York City, New York, pp. 418--422.
+- Leong, TW, Lawrence, C & Wadley, G 2019, 'Designing for diversity in
+  Aboriginal Australia : Insights from a national technology project', in
+  *Proceedings of the 31st Australian Conference on
+  Human-Computer-Interaction (OZCHI'19)*, Association for Computing
+  Machinery, New York City, New York, pp. 418--422.
 
-NHRMC 2018, *National Statement on Ethical Conduct in Human Research*,
-Canberra, accessed from
-\<https://www.nhmrc.gov.au/about-us/publications/national-statement-ethical-conduct-human-research-2007-updated-2018\>.
+- NHRMC 2018, *National Statement on Ethical Conduct in Human Research*,
+  Canberra, accessed from
+  \<https://www.nhmrc.gov.au/about-us/publications/national-statement-ethical-conduct-human-research-2007-updated-2018\>.
