--- a/workshops/week-02-2023.md
+++ b/workshops/week-02-2023.md
@@ -1,9 +1,9 @@
-**Tutorial Week 2, Semester 2 2022: Design Product Analysis**
+---
+title: Design Product Analysis
+author: Dr Jennyfer Lawrence Taylor
+---
 
-Prepared by Jennyfer Lawrence Taylor (with contributions from Penny
-Kyburz)
-
-**About the Tutorials**
+## About the Tutorials
 
 This is the first tutorial for the semester. This document outlines the
 plan for this tutorial. Your Tutor may vary this plan as needed during
@@ -11,26 +11,7 @@ the tutorial. Each tutorial will be broken down into activities that you
 will do: (1) before the tutorial (preparation), and (2) during the
 tutorial (activities).
 
-Each tutorial is 50 minutes long, and will start at five minutes past
-the hour and conclude at five minutes to the hour. Tutorials will not be
-recorded, and students must not make their own recordings of the session
-for the comfort and privacy of participants.
-
-If you are participating in the online tutorials, we request that you
-turn your camera on and keep it on for the duration of the tutorial.
-This will enable your Tutor to take attendance and monitor your
-experience during the tutorial, and will support you to effectively
-learn HCI design methods and practices such as user interview skills
-that involve non-verbal interactions.
-
-All tutorial participants in in-person classes must wear a face mask and
-keep this on for the duration of the tutorial. If a participant is not
-wearing a mask, the tutor will pause the tutorial session until everyone
-is wearing a mask. If you have a medical exemption or are seeking
-further information, please see the ANU COVID-19 Advice page:
-<https://www.anu.edu.au/covid-19-advice#masks>
-
-**Aims and Purpose**
+## Aims and Purpose
 
 The intended learning outcomes of this tutorial is to:
 
@@ -43,7 +24,7 @@ The intended learning outcomes of this tutorial is to:
 - Reflect on your own experiences of technology use and identify the
   position and assumptions that you bring to design analysis
 
-**Preparation**
+## Preparation
 
 You should complete the following activities prior to attending your
 tutorial:
@@ -57,36 +38,19 @@ tutorial:
 3.  Make notes about your own experiences of using the design products
     that are addressed in the tutorial activities.
 
-**Structure**
+## Structure
 
 The tutorial will follow this structure:
 
-1.  Introduction and announcements + Make your name card (5 minutes)
+1. Introduction and announcements + Make your name card (5 minutes)
+2. Design product analysis (25 minutes)
+3. Reporting back and discussion (15 minutes)
+4. Questions and tutorial close (5 minutes)
 
-2.  Design product analysis (25 minutes)
+## Activities
 
-3.  Reporting back and discussion (15 minutes)
 
-4.  Questions and tutorial close (5 minutes)
-
-**Activities**
-
-1.  Introduction and Announcements (5 minutes)
-
-    a.  Your Tutor(s) will hand out the pieces of card to make your name
-        tags.
-
-    b.  Your Tutor(s) will welcome you and commence the session with an
-        [Acknowledgement of
-        Country](https://services.anu.edu.au/human-resources/respect-inclusion/anu-acknowledgment-of-country).
-        If you are joining on Zoom, you are invited to acknowledge the
-        Traditional Custodians of the place that you are joining from
-        using the Zoom chat.
-
-    c.  You Tutor(s) will introduce themselves to you, and provide you
-        with any announcements or reminders.
-
-2.  Make your name card
+### Make your name card
 
 - You will be asked to create a name tag for yourself with the name that
   you would like others to call you, your pronouns, and a
@@ -103,87 +67,64 @@ The tutorial will follow this structure:
   that you return you name card to your Tutor(s) at the end of each
   tutorial.**
 
-- If you preferred name is different to the name that you have used to
-  enrol in the course, please write your actual name on the bottom of
-  your name card, or for Zoom participants, put it in brackets or tell
-  your Tutors (to help them take attendance).
+- If you preferred name is different to the name that you have used to enrol in the course, please write your actual name on the bottom of your name card, or for Zoom participants, put it in brackets or tell your Tutors (to help them take attendance).
 
-<!-- -->
+Example name card: Jennyfer (she/her/hers) 
+![Take Off with solid fill](img/image2.svg){width="25%"}
 
-- Example name card: Jennyfer (she/her/hers) ![Take Off with solid
-  fill](./media/image2.svg){width="0.2638888888888889in"
-  height="0.2638888888888889in"}
+For further information about what pronouns are, and why we ask you to write your pronouns on your name card, please see the ANU webpage on [Gender Inclusive Language](https://services.anu.edu.au/human-resources/respect-inclusion/gender-inclusive-language).
 
-For further information about what pronouns are, and why we ask you to
-write your pronouns on your name card, please see the ANU webpage on
-[Gender Inclusive
-Language](https://services.anu.edu.au/human-resources/respect-inclusion/gender-inclusive-language)
+### Design product analysis (25 minutes)
 
-3.  Design product analysis (25 minutes)
+Your Tutor(s) will randomly allocate you into 3-4 groups.
 
-    a.  Your Tutor(s) will randomly allocate you into 3-4 groups in the
-        physical room, or allocate you to breakout rooms.
+Introduce yourself to the other students in your group.
 
-    b.  Introduce yourself to the other students in your group.
+Consider the following design product categories, and identify which design product you think would provide the best user experience in the scenarios provided. There is no right or wrong answer, but the skill you are practicing is how to convincingly make your case with reference to specifics. You should analyse user experiences in relation to the following criteria:
 
-    c.  Consider the following design product categories, and identify
-        which design product you think would provide the best user
-        experience in the scenarios provided. There is no right or wrong
-        answer, but the skill you are practicing is how to convincingly
-        make your case with reference to specifics. ☺\
-        \
-        You should analyse user experiences in relation to the
-        following:
+- Adherence to usability goals and design principles (from Lectures Week 1)
 
-- Adherence to usability goals and design principles (from Lectures Week
-  1)
-
-- Your own experiences of using these technologies and the feelings or
-  emotions that they elicit (and why)
+- Your own experiences of using these technologies and the feelings or emotions that they elicit (and why)
 
 - Metaphors used and interaction modalities offered by the design.
 
-- The people and context that the scenario relates to (see Lectures Week
-  1 slide 52). Think about what information is **not provided** and what
-  assumptions you therefore need to make about the scenario.
+- The people and context that the scenario relates to (see Lectures Week 1 slide 52). Think about what information is **not provided** and what assumptions you therefore need to make about the scenario.
 
-**DESIGN PRODUCT CATEGORIES AND SCENARIOS:**
+## Design Product Categories And Scenarios
 
-**Video Calling or Conferencing Platforms (e.g., Skype, Microsoft Teams,
-Zoom, Facetime, WeChat Video)**
+### Video Calling or Conferencing Platforms (e.g., Skype, Microsoft Teams, Zoom, Facetime, WeChat Video)
 
-Which video calling or conferencing platform listed above, or that you
-are familiar with, would provide the best user experience in the
-following scenarios?
+Which video calling or conferencing platform listed above, or that you are familiar with, would provide the best user experience in the following scenarios?
 
-- SCENARIO A: A school teaching online classes to students aged 13-18
+- Scenario A: A school teaching online classes to students aged 13-18
   years old at home (approx. 25-30 students in each class)
 
-- SCENARIO B: Grandparents communicating regularly with their young
+- Scenario B: Grandparents communicating regularly with their young
   grandchildren (aged 3-5) who live far away from them
 
-**Navigation Apps (e.g., Apple Maps, Google Maps, Waze)**
+### Navigation Apps (e.g., Apple Maps, Google Maps, Waze)
 
 Which navigation app listed above, or that you are familiar with, would
 provide the best user experience in the following scenarios?
 
-- SCENARIO C: Visiting a new city on holidays for the first time, and
+- Scenario C: Visiting a new city on holidays for the first time, and
   navigating from the airport to your hotel using public transport.
 
-- SCENARIO D: Navigating while riding your bike from one place to
+- Scenario D: Navigating while riding your bike from one place to
   another in your hometown/city (without a mobile phone mount on your
   bike)
 
-**If there is time remaining in your group discussion: Music Playing
-Platforms (e.g., iTunes, Spotify, YouTube Music)**
+### Music Playing Platforms (e.g., iTunes, Spotify, YouTube Music)
+
+(use only if there is time remaining in your group discussion...)
 
 Which music playing platform listed above, or that you are familiar
 with, would provide the best user experience in the following scenarios?
 
-- SCENARIO E: Privately listening to music/podcasts while taking public
+- Scenario E: Privately listening to music/podcasts while taking public
   transport somewhere
 
-- SCENARIO F: Creating and listening to a playlist of background music
+- Scenario F: Creating and listening to a playlist of background music
   at a social work function
 
   a.  While you are doing this activity, your Tutor will check in with
@@ -191,25 +132,13 @@ with, would provide the best user experience in the following scenarios?
       Your Tutor can give feedback as to whether this is an appropriate
       choice for the assessment tasks.
 
-4.  Reporting back and discussion (15 minutes)
+### Reporting back and discussion (15 minutes)
 
-    a.  The Tutor(s) will bring you back together for a whole group
-        discussion to reflect on what you learnt and observed.
+The Tutor(s) will bring you back together for a whole group discussion to reflect on what you learnt and observed.
 
-    b.  Your Tutor(s) will work by scenario, and for each scenario from
-        A-D ask each group to share which design product they chose, and
-        the key reason(s) for your choice.\
-        \
-        Make sure that you succinctly present your main argument and key
-        examples that support this (no more than 30 seconds each group
-        approx.).
+Your Tutor(s) will work by scenario, and for each scenario from A-D ask each group to share which design product they chose, and the key reason(s) for your choice.
 
-    c.  Your Tutor(s) will facilitate discussion about your responses,
-        and address scenarios E-F if you have time.
+Make sure that you succinctly present your main argument and key examples that support this (no more than 30 seconds each group
+approx.).
 
-5.  Questions and tutorial close (5 minutes)
-
-    a.  The Tutor(s) will bring the workshop to a close and answer any
-        questions if there is time.
-
-    b.  Please return your name cards to your Tutor(s).
+Your Tutor(s) will facilitate discussion about your responses, and address scenarios E-F if you have time.
